--- a/index.html
+++ b/index.html
@@ -5,12 +5,13 @@
   <meta charset="UTF-8" />
   <link rel="icon" href="/favicon.ico" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="stylesheet" type="text/css" href="/css/style.css">
+  <link rel="stylesheet" type="text/css" href="/css/style.css?v=1">
   <title>Karta Mieszkańca</title>
 </head>
 
 <body>
   <div id="app"></div>
+  <script type="module" src="/src/main.ts"></script>
 </body>
 
 </html>
